--- a/JsonToCsv/JsonToCsv.csproj
+++ b/JsonToCsv/JsonToCsv.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -10,4 +10,7 @@
     <PackageReference Include="MudBlazor" Version="8.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="JsonToCsv.Tests" />
+  </ItemGroup>
 </Project>
